# wuziqi

./: .gitignore  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-03-15-wuziqi-implementation.md
docs/superpowers/specs/: 2026-03-15-wuziqi-rl-design.md
tests/wuziqi_core/: test_ai.py  test_board.py  test_game.py  test_player.py
tests/wuziqi_gym/: __init__.py  test_env.py
trainer/: config.py  evaluate.py  train.py
wuziqi_core/: ai.py  board.py  game.py  player.py
wuziqi_gym/: __init__.py  env.py
wuziqi_ui/: __init__.py  controller.py  main.py  renderer.py
