[project]
name = "wuziqi"
version = "0.1.0"
description = "五子棋RL训练平台 - Five-in-a-row RL Training Platform"
requires-python = ">=3.8"
dependencies = [
    "gymnasium>=0.29.0",
    "pygame>=2.5.0",
    "stable-baselines3>=2.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
